This New modified Practice classes commit

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,11 +11,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>jenTest3</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>jenTest1</td>
-<td>&nbsp;</td></tr>
+<td>sanity </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>jenTest2</td>
+<td>system </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>jenTest4</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
