--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,12 +11,51 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>jenTest3</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>jenTest1</td>
-<td>&nbsp;</td></tr>
+<td>sanity </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>jenTest2</td>
+<td>system </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>jenTest4</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>jenkinsPractice.practice1</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>jenTest5</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>jenTest4</td>
+<td>functional </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
