--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>functional</td><td>practice1.jenTest4(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@30f842ca]<br/></td></tr>
+<tr><td>regression</td><td>practice1.jenTest5(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@30f842ca]<br/></td></tr>
+</table>
