--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,30 +4,21 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>jenkinsPractice.practice</td>
+<td>jenkinsPractice.practice1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>jenTest3</td>
+<td>jenTest5</td>
 <td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>jenTest1</td>
-<td>sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>jenTest2</td>
-<td>system </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>jenTest4</td>
-<td>&nbsp;</td></tr>
+<td>functional </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
