--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,2 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="e37eba">  <td>22/12/21 21:46:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practice1.jenTest4(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@2b40ff9c]">jenTest4</td> 
+  <td>main@1150058854</td>   <td></td> </tr>
+<tr bgcolor="e37eba">  <td>22/12/21 21:51:32</td>   <td>323843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practice1.jenTest5(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@2b40ff9c]">jenTest5</td> 
+  <td>main@1150058854</td>   <td></td> </tr>
 </table>
