--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,6 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>functional</td><td>practice1.jenTest4(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@30f842ca]<br/></td></tr>
-<tr><td>regression</td><td>practice1.jenTest5(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@30f842ca]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>functional</td><td>practice1.jenTest4(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@7b4c50bc]<br/></td></tr>
+<tr><td>regression</td><td>practice.jenTest3(java.lang.String)[pri:0, instance:jenkinsPractice.practice@5ddeb7cb]<br/>practice1.jenTest5(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@7b4c50bc]<br/></td></tr>
+<tr><td>sanity</td><td>practice.jenTest1(java.lang.String)[pri:0, instance:jenkinsPractice.practice@5ddeb7cb]<br/></td></tr>
+<tr><td>system</td><td>practice.jenTest2(java.lang.String)[pri:0, instance:jenkinsPractice.practice@5ddeb7cb]<br/></td></tr>
 </table>
