--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="de84cc">  <td>22/12/21 12:19:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practice1.jenTest4(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@30f842ca]">jenTest4</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="de84cc">  <td>22/12/21 12:19:31</td>   <td>3579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practice1.jenTest5(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@30f842ca]">jenTest5</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
+<tr bgcolor="7f66c4">  <td>22/12/21 22:03:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practice.jenTest1(java.lang.String)[pri:0, instance:jenkinsPractice.practice@5ddeb7cb]">jenTest1</td> 
+  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="7f66c4">  <td>22/12/21 22:04:17</td>   <td>20290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practice.jenTest2(java.lang.String)[pri:0, instance:jenkinsPractice.practice@5ddeb7cb]">jenTest2</td> 
+  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="7f66c4">  <td>22/12/21 22:04:26</td>   <td>29447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practice.jenTest3(java.lang.String)[pri:0, instance:jenkinsPractice.practice@5ddeb7cb]">jenTest3</td> 
+  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="7f66c4">  <td>22/12/21 22:04:29</td>   <td>32284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practice.jenTest4(java.lang.String)[pri:0, instance:jenkinsPractice.practice@5ddeb7cb]">jenTest4</td> 
+  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="df60a0">  <td>22/12/21 22:04:30</td>   <td>33477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practice1.jenTest4(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@7b4c50bc]">jenTest4</td> 
+  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="df60a0">  <td>22/12/21 22:04:36</td>   <td>39018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practice1.jenTest5(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@7b4c50bc]">jenTest5</td> 
+  <td>main@613784740</td>   <td></td> </tr>
 </table>
