Commit from 3nesh branch

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,27 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Browser1</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">33,453</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Browser2</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,130</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">5</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num">44,583</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,726</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Browser1 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">jenkinsPractice.practice</td><td><a href="#m0">jenTest4</a></td><td rowspan="1">1671640469624</td><td rowspan="1">1121</td></tr><tr><th colspan="4">Browser1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">jenkinsPractice.practice</td><td><a href="#m1">jenTest1</a></td><td rowspan="1">1671640437340</td><td rowspan="1">20286</td></tr><tr class="passedeven"><td><a href="#m2">jenTest2</a></td><td rowspan="1">1671640457630</td><td rowspan="1">9154</td></tr><tr class="passedeven"><td><a href="#m3">jenTest3</a></td><td rowspan="1">1671640466787</td><td rowspan="1">2836</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Browser2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">jenkinsPractice.practice1</td><td><a href="#m4">jenTest4</a></td><td rowspan="1">1671640470817</td><td rowspan="1">5538</td></tr><tr class="passedeven"><td><a href="#m5">jenTest5</a></td><td rowspan="1">1671640476358</td><td rowspan="1">5583</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">jenkinsPractice.practice</td><td><a href="#m0">jenTest3</a></td><td rowspan="1">1672072755164</td><td rowspan="1">4691</td></tr></tbody>
 </table>
-<h2>Browser1</h2><h3 id="m0">jenkinsPractice.practice#jenTest4</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: null value in entry: url=null
-	at com.google.common.collect.CollectPreconditions.checkEntryNotNull(CollectPreconditions.java:32)
-	at com.google.common.collect.SingletonImmutableBiMap.&lt;init&gt;(SingletonImmutableBiMap.java:42)
-	at com.google.common.collect.ImmutableBiMap.of(ImmutableBiMap.java:72)
-	at com.google.common.collect.ImmutableMap.of(ImmutableMap.java:124)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:277)
-	at jenkinsPractice.practice.jenTest4(practice.java:79)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">jenkinsPractice.practice#jenTest1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">jenkinsPractice.practice#jenTest2</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">jenkinsPractice.practice#jenTest3</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Browser2</h2><h3 id="m4">jenkinsPractice.practice1#jenTest4</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">jenkinsPractice.practice1#jenTest5</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">jenkinsPractice.practice#jenTest3</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
