--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,20 +4,29 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>jenkinsPractice.practice1</td>
+<td>jenkinsPractice.practice</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>jenTest5</td>
+<td>jenTest4</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>jenTest3</td>
 <td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>jenTest4</td>
-<td>functional </td>
+<td>jenTest1</td>
+<td>sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>jenTest2</td>
+<td>system </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
