--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,4 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>functional</td><td>practice1.jenTest4(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@2b40ff9c]<br/></td></tr>
-<tr><td>regression</td><td>practice1.jenTest5(java.lang.String)[pri:0, instance:jenkinsPractice.practice1@2b40ff9c]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>practice.jenTest3(java.lang.String)[pri:0, instance:jenkinsPractice.practice@7188af83]<br/></td></tr>
 </table>
