--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>jenkinsPractice.practice.jenTest4</td></tr>
+<tr><td>jenkinsPractice.practice.jenTest2</td></tr>
+<tr><td>jenkinsPractice.practice.jenTest1</td></tr>
 </table>
